user interface seperation

--- a/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2_resources.qrc
+++ b/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2_resources.qrc
@@ -1,15 +1,59 @@
 <RCC>
   <qresource prefix="SABRE2_resources">
-    <file>ic_crop_rotate_36pt_2x.png</file>
+    <file>ic_note_36pt_2x.png</file>
+    <file>box-outline1.png</file>
+    <file>box-outline2.png</file>
+    <file>box-outline.png</file>
     <file>ic_assessment_36pt_2x.png</file>
     <file>ic_assignment_late_36pt_2x.png</file>
     <file>ic_assignment_return_36pt_2x.png</file>
     <file>ic_autorenew_36pt_2x.png</file>
     <file>ic_camera_enhance_36pt_2x.png</file>
+    <file>ic_crop_rotate_36pt_2x.png</file>
+    <file>ic_delete_36pt_2x.png</file>
     <file>ic_done_all_36pt_2x.png</file>
     <file>ic_exit_to_app_36pt_2x.png</file>
+    <file>ic_extension_36pt_2x.png</file>
+    <file>ic_fast_forward_36pt_2x.png</file>
+    <file>ic_fiber_new_36pt_2x.png</file>
+    <file>ic_file_download_36pt_2x.png</file>
     <file>ic_find_in_page_36pt_2x.png</file>
+    <file>ic_flag_36pt_2x.png</file>
+    <file>ic_folder_36pt_2x.png</file>
+    <file>ic_grid_off_36pt_2x.png</file>
+    <file>ic_grid_on_36pt_2x.png</file>
+    <file>ic_home_36pt_2x.png</file>
     <file>ic_info_36pt_2x.png</file>
+    <file>ic_info_outline_36pt_2x.png</file>
+    <file>ic_input_36pt_2x.png</file>
+    <file>ic_insert_chart_36pt_2x.png</file>
+    <file>ic_invert_colors_36pt_2x.png</file>
+    <file>ic_keyboard_36pt_2x.png</file>
+    <file>ic_keyboard_arrow_left_36pt_2x.png</file>
+    <file>ic_keyboard_arrow_right_36pt_2x.png</file>
+    <file>ic_keyboard_hide_36pt_2x.png</file>
     <file>ic_list_36pt_2x.png</file>
+    <file>ic_lock_open_36pt_2x.png</file>
+    <file>ic_lock_outline_36pt_2x.png</file>
+    <file>ic_note_add_36pt_2x.png</file>
+    <file>ic_open_with_36pt_2x.png</file>
+    <file>ic_pan_tool_36pt_2x.png</file>
+    <file>ic_pause_36pt_2x.png</file>
+    <file>ic_play_arrow_36pt_2x.png</file>
+    <file>ic_power_settings_new_36pt_2x.png</file>
+    <file>ic_print_36pt_2x.png</file>
+    <file>ic_save_36pt_2x.png</file>
+    <file>ic_settings_36pt_2x.png</file>
+    <file>ic_settings_overscan_36pt_2x.png</file>
+    <file>ic_tab_36pt_2x.png</file>
+    <file>ic_thumb_up_36pt_2x.png</file>
+    <file>ic_update_36pt_2x.png</file>
+    <file>ic_verified_user_36pt_2x.png</file>
+    <file>ic_visibility_36pt_2x.png</file>
+    <file>ic_visibility_off_36pt_2x.png</file>
+    <file>ic_warning_36pt_2x.png</file>
+    <file>ic_zoom_in_36pt_2x.png</file>
+    <file>ic_zoom_out_36pt_2x.png</file>
+    <file>ic_zoom_out_map_36pt_2x.png</file>
   </qresource>
 </RCC>
