--- a/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
+++ b/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
@@ -2922,6 +2922,19 @@ Number</string>
         <property name="text">
          <string>Definition</string>
         </property>
+        <property name="icon">
+         <iconset resource="SABRE2_resources.qrc">
+          <normaloff>:/SABRE2_resources/ic_keyboard_hide_36pt_2x.png</normaloff>:/SABRE2_resources/ic_keyboard_hide_36pt_2x.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="toolButtonStyle">
+         <enum>Qt::ToolButtonTextBesideIcon</enum>
+        </property>
         <property name="autoRaise">
          <bool>true</bool>
         </property>
@@ -2941,6 +2954,19 @@ Number</string>
         </property>
         <property name="text">
          <string>Analysis</string>
+        </property>
+        <property name="icon">
+         <iconset resource="SABRE2_resources.qrc">
+          <normaloff>:/SABRE2_resources/ic_play_arrow_36pt_2x.png</normaloff>:/SABRE2_resources/ic_play_arrow_36pt_2x.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="toolButtonStyle">
+         <enum>Qt::ToolButtonTextBesideIcon</enum>
         </property>
         <property name="autoRaise">
          <bool>true</bool>
@@ -2965,6 +2991,19 @@ Number</string>
         </property>
         <property name="text">
          <string>Main Window</string>
+        </property>
+        <property name="icon">
+         <iconset resource="SABRE2_resources.qrc">
+          <normaloff>:/SABRE2_resources/ic_settings_overscan_36pt_2x.png</normaloff>:/SABRE2_resources/ic_settings_overscan_36pt_2x.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="toolButtonStyle">
+         <enum>Qt::ToolButtonTextBesideIcon</enum>
         </property>
         <property name="autoRaise">
          <bool>true</bool>
@@ -3015,25 +3054,59 @@ Number</string>
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionRotate"/>
+   <addaction name="actionPan"/>
+   <addaction name="actionZoom_In"/>
+   <addaction name="actionZoom_Out"/>
+   <addaction name="actionFit_View"/>
+   <addaction name="separator"/>
+   <addaction name="actionRender_Line_Element"/>
+   <addaction name="actionRender_Selected_Member"/>
+   <addaction name="actionRender_All_Members"/>
   </widget>
   <action name="actionAbout">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_info_outline_36pt_2x.png</normaloff>:/SABRE2_resources/ic_info_outline_36pt_2x.png</iconset>
+   </property>
    <property name="text">
     <string>About</string>
    </property>
   </action>
   <action name="actionNew">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_note_36pt_2x.png</normaloff>:/SABRE2_resources/ic_note_36pt_2x.png</iconset>
+   </property>
    <property name="text">
     <string>New</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
   </action>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_folder_36pt_2x.png</normaloff>:/SABRE2_resources/ic_folder_36pt_2x.png</iconset>
+   </property>
    <property name="text">
     <string>Open</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
   </action>
   <action name="actionSave">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_save_36pt_2x.png</normaloff>:/SABRE2_resources/ic_save_36pt_2x.png</iconset>
+   </property>
    <property name="text">
     <string>Save</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionSave_As">
@@ -3042,18 +3115,138 @@ Number</string>
    </property>
   </action>
   <action name="actionPrint_Preview">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_camera_enhance_36pt_2x.png</normaloff>:/SABRE2_resources/ic_camera_enhance_36pt_2x.png</iconset>
+   </property>
    <property name="text">
     <string>Print Preview</string>
    </property>
   </action>
   <action name="actionPrint">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_print_36pt_2x.png</normaloff>:/SABRE2_resources/ic_print_36pt_2x.png</iconset>
+   </property>
    <property name="text">
     <string>Print</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+P</string>
+   </property>
   </action>
   <action name="actionQuit">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_power_settings_new_36pt_2x.png</normaloff>:/SABRE2_resources/ic_power_settings_new_36pt_2x.png</iconset>
+   </property>
    <property name="text">
     <string>Quit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
+  </action>
+  <action name="actionRotate">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_crop_rotate_36pt_2x.png</normaloff>:/SABRE2_resources/ic_crop_rotate_36pt_2x.png</iconset>
+   </property>
+   <property name="text">
+    <string>Rotate</string>
+   </property>
+   <property name="toolTip">
+    <string>Rotate 3D</string>
+   </property>
+  </action>
+  <action name="actionPan">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_open_with_36pt_2x.png</normaloff>:/SABRE2_resources/ic_open_with_36pt_2x.png</iconset>
+   </property>
+   <property name="text">
+    <string>Pan</string>
+   </property>
+   <property name="toolTip">
+    <string>Pan View</string>
+   </property>
+  </action>
+  <action name="actionZoom_In">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_zoom_in_36pt_2x.png</normaloff>:/SABRE2_resources/ic_zoom_in_36pt_2x.png</iconset>
+   </property>
+   <property name="text">
+    <string>Zoom In</string>
+   </property>
+   <property name="toolTip">
+    <string>Zoom In</string>
+   </property>
+  </action>
+  <action name="actionZoom_Out">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_zoom_out_36pt_2x.png</normaloff>:/SABRE2_resources/ic_zoom_out_36pt_2x.png</iconset>
+   </property>
+   <property name="text">
+    <string>Zoom Out</string>
+   </property>
+   <property name="toolTip">
+    <string>Zoom Out</string>
+   </property>
+  </action>
+  <action name="actionFit_View">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/ic_zoom_out_map_36pt_2x.png</normaloff>:/SABRE2_resources/ic_zoom_out_map_36pt_2x.png</iconset>
+   </property>
+   <property name="text">
+    <string>Fit View</string>
+   </property>
+   <property name="toolTip">
+    <string>Fit View</string>
+   </property>
+  </action>
+  <action name="actionRender_Line_Element">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/box-outline.png</normaloff>:/SABRE2_resources/box-outline.png</iconset>
+   </property>
+   <property name="text">
+    <string>Render Line Element</string>
+   </property>
+   <property name="toolTip">
+    <string>Render with line elements</string>
+   </property>
+  </action>
+  <action name="actionRender_Selected_Member">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/box-outline1.png</normaloff>:/SABRE2_resources/box-outline1.png</iconset>
+   </property>
+   <property name="text">
+    <string>Render Selected Member</string>
+   </property>
+   <property name="toolTip">
+    <string>Render Selected Member</string>
+   </property>
+  </action>
+  <action name="actionRender_All_Members">
+   <property name="icon">
+    <iconset resource="SABRE2_resources.qrc">
+     <normaloff>:/SABRE2_resources/box-outline2.png</normaloff>:/SABRE2_resources/box-outline2.png</iconset>
+   </property>
+   <property name="text">
+    <string>Render All Members</string>
+   </property>
+   <property name="toolTip">
+    <string>Render all members</string>
    </property>
   </action>
  </widget>
