data_reader fun is generalized and it detects changes in tables, issue = it cannot read the combo box items?

--- a/GUI dev/Try1_Oguzhan/GUI Examples/QtDesignerTableExample/table.ui
+++ b/GUI dev/Try1_Oguzhan/GUI Examples/QtDesignerTableExample/table.ui
@@ -123,5 +123,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>tableWidget</sender>
+   <signal>cellChanged(int,int)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>update()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>109</x>
+     <y>106</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>58</x>
+     <y>106</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
