--- a/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
+++ b/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
@@ -464,7 +464,7 @@
        <enum>QTabWidget::Triangular</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="iconSize">
        <size>
@@ -697,7 +697,7 @@
         <item>
          <widget class="QTabWidget" name="Members_tabs">
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="Member_Def">
            <attribute name="title">
@@ -705,7 +705,7 @@
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_4">
             <item>
-             <widget class="QTableWidget" name="tableWidget">
+             <widget class="QTableWidget" name="Members_table">
               <attribute name="horizontalHeaderDefaultSectionSize">
                <number>70</number>
               </attribute>
