--- a/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
+++ b/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
@@ -879,6 +879,11 @@
                 </font>
                </property>
               </column>
+              <item row="0" column="3">
+               <property name="text">
+                <string>0</string>
+               </property>
+              </item>
              </widget>
             </item>
             <item>
@@ -2537,8 +2542,8 @@ Number</string>
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>1053</width>
-                 <height>75</height>
+                 <width>98</width>
+                 <height>28</height>
                 </rect>
                </property>
               </widget>
