--- a/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
+++ b/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
@@ -464,7 +464,7 @@
        <enum>QTabWidget::Triangular</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>3</number>
       </property>
       <property name="iconSize">
        <size>
@@ -1255,7 +1255,7 @@
         <item>
          <widget class="QTabWidget" name="BoundaryConditionsTabs">
           <property name="currentIndex">
-           <number>3</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="FixitiesTab">
            <attribute name="title">
@@ -1505,108 +1505,17 @@
              </widget>
             </item>
             <item>
-             <layout class="QGridLayout" name="gridLayout_10">
-              <item row="1" column="0">
-               <widget class="QPushButton" name="Delete_last_row_fixities">
-                <property name="minimumSize">
-                 <size>
-                  <width>0</width>
-                  <height>0</height>
-                 </size>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>200</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Delete Last 
- Row</string>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="0">
-               <widget class="QPushButton" name="Delete_new_row_button_fixities">
-                <property name="maximumSize">
-                 <size>
-                  <width>150</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Delete Row 
-Number</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QPushButton" name="Insert_new_row_button_fixities">
-                <property name="enabled">
-                 <bool>true</bool>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>150</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Insert a New 
- Row After</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="0">
-               <widget class="QPushButton" name="Add_new_row_fixities">
-                <property name="maximumSize">
-                 <size>
-                  <width>200</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Add New
- Row</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
-               <widget class="QLineEdit" name="Inser_number_fixities">
-                <property name="maximumSize">
-                 <size>
-                  <width>50</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="layoutDirection">
-                 <enum>Qt::LeftToRight</enum>
-                </property>
-                <property name="text">
-                 <string>2</string>
-                </property>
-                <property name="alignment">
-                 <set>Qt::AlignCenter</set>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="1">
-               <widget class="QLineEdit" name="Delete_number_fixities">
-                <property name="maximumSize">
-                 <size>
-                  <width>50</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>2</string>
-                </property>
-                <property name="alignment">
-                 <set>Qt::AlignCenter</set>
-                </property>
-               </widget>
-              </item>
-             </layout>
+             <spacer name="horizontalSpacer_11">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </widget>
@@ -2542,8 +2451,8 @@ Number</string>
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>98</width>
-                 <height>28</height>
+                 <width>1053</width>
+                 <height>75</height>
                 </rect>
                </property>
               </widget>
@@ -3122,7 +3031,7 @@ Number</string>
          <string>Definition</string>
         </property>
         <property name="icon">
-         <iconset resource="SABRE2_resources.qrc">
+         <iconset>
           <normaloff>:/SABRE2_resources/ic_keyboard_hide_36pt_2x.png</normaloff>:/SABRE2_resources/ic_keyboard_hide_36pt_2x.png</iconset>
         </property>
         <property name="iconSize">
@@ -3155,7 +3064,7 @@ Number</string>
          <string>Analysis</string>
         </property>
         <property name="icon">
-         <iconset resource="SABRE2_resources.qrc">
+         <iconset>
           <normaloff>:/SABRE2_resources/ic_play_arrow_36pt_2x.png</normaloff>:/SABRE2_resources/ic_play_arrow_36pt_2x.png</iconset>
         </property>
         <property name="iconSize">
@@ -3192,7 +3101,7 @@ Number</string>
          <string>Main Window</string>
         </property>
         <property name="icon">
-         <iconset resource="SABRE2_resources.qrc">
+         <iconset>
           <normaloff>:/SABRE2_resources/ic_settings_overscan_36pt_2x.png</normaloff>:/SABRE2_resources/ic_settings_overscan_36pt_2x.png</iconset>
         </property>
         <property name="iconSize">
@@ -3283,7 +3192,7 @@ Number</string>
   </widget>
   <action name="actionAbout">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_info_outline_36pt_2x.png</normaloff>:/SABRE2_resources/ic_info_outline_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3292,7 +3201,7 @@ Number</string>
   </action>
   <action name="actionNew">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_note_36pt_2x.png</normaloff>:/SABRE2_resources/ic_note_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3304,7 +3213,7 @@ Number</string>
   </action>
   <action name="actionOpen">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_folder_36pt_2x.png</normaloff>:/SABRE2_resources/ic_folder_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3316,7 +3225,7 @@ Number</string>
   </action>
   <action name="actionSave">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_save_36pt_2x.png</normaloff>:/SABRE2_resources/ic_save_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3333,7 +3242,7 @@ Number</string>
   </action>
   <action name="actionPrint_Preview">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_camera_enhance_36pt_2x.png</normaloff>:/SABRE2_resources/ic_camera_enhance_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3342,7 +3251,7 @@ Number</string>
   </action>
   <action name="actionPrint">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_print_36pt_2x.png</normaloff>:/SABRE2_resources/ic_print_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3354,7 +3263,7 @@ Number</string>
   </action>
   <action name="actionQuit">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_power_settings_new_36pt_2x.png</normaloff>:/SABRE2_resources/ic_power_settings_new_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3369,7 +3278,7 @@ Number</string>
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_crop_rotate_36pt_2x.png</normaloff>:/SABRE2_resources/ic_crop_rotate_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3384,7 +3293,7 @@ Number</string>
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_open_with_36pt_2x.png</normaloff>:/SABRE2_resources/ic_open_with_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3396,7 +3305,7 @@ Number</string>
   </action>
   <action name="actionZoom_In">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_zoom_in_36pt_2x.png</normaloff>:/SABRE2_resources/ic_zoom_in_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3408,7 +3317,7 @@ Number</string>
   </action>
   <action name="actionZoom_Out">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_zoom_out_36pt_2x.png</normaloff>:/SABRE2_resources/ic_zoom_out_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3420,7 +3329,7 @@ Number</string>
   </action>
   <action name="actionFit_View">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/ic_zoom_out_map_36pt_2x.png</normaloff>:/SABRE2_resources/ic_zoom_out_map_36pt_2x.png</iconset>
    </property>
    <property name="text">
@@ -3432,7 +3341,7 @@ Number</string>
   </action>
   <action name="actionRender_Line_Element">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/box-outline.png</normaloff>:/SABRE2_resources/box-outline.png</iconset>
    </property>
    <property name="text">
@@ -3444,7 +3353,7 @@ Number</string>
   </action>
   <action name="actionRender_Selected_Member">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/box-outline1.png</normaloff>:/SABRE2_resources/box-outline1.png</iconset>
    </property>
    <property name="text">
@@ -3456,7 +3365,7 @@ Number</string>
   </action>
   <action name="actionRender_All_Members">
    <property name="icon">
-    <iconset resource="SABRE2_resources.qrc">
+    <iconset>
      <normaloff>:/SABRE2_resources/box-outline2.png</normaloff>:/SABRE2_resources/box-outline2.png</iconset>
    </property>
    <property name="text">
