update on fixities table

--- a/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
+++ b/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
@@ -1441,6 +1441,9 @@
                <property name="checkState">
                 <enum>Unchecked</enum>
                </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
               </item>
               <item row="0" column="2">
                <property name="text">
@@ -1449,30 +1452,63 @@
                <property name="checkState">
                 <enum>Unchecked</enum>
                </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
               </item>
               <item row="0" column="3">
+               <property name="text">
+                <string/>
+               </property>
                <property name="checkState">
                 <enum>Unchecked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
                </property>
               </item>
               <item row="0" column="4">
+               <property name="text">
+                <string/>
+               </property>
                <property name="checkState">
                 <enum>Unchecked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
                </property>
               </item>
               <item row="0" column="5">
+               <property name="text">
+                <string/>
+               </property>
                <property name="checkState">
                 <enum>Unchecked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
                </property>
               </item>
               <item row="0" column="6">
+               <property name="text">
+                <string/>
+               </property>
                <property name="checkState">
                 <enum>Unchecked</enum>
                </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
               </item>
               <item row="0" column="7">
+               <property name="text">
+                <string/>
+               </property>
                <property name="checkState">
                 <enum>Unchecked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
                </property>
               </item>
              </widget>
